# s3-connector-for-pytorch

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  MOMENTUM_OPTIMIZE_PROPOSAL.md  NOTICE  README.md  THIRD-PARTY-LICENSES  conftest.py  genindex.html  index.html  licenses.ini  objects.inv  py-modindex.html  pyproject.toml  run_cibuildwheel_on_ec2.sh  search.html  searchindex.js  setup.py
rust/: lib.rs  (+2 more)
s3dataset/: pyproject.toml
s3dataset/src/s3dataset/: __init__.py  _s3_bucket_iterable.py  s3checkpoint.py  s3dataset_base.py  s3iterable_dataset.py  s3map_dataset.py  s3mapstyle_dataset.py
s3dataset/src/s3dataset/_s3client/: __init__.py  _mock_s3client.py  _s3client.py  put_object_stream_wrapper.py  s3reader.py  s3writer.py
s3dataset/tst/e2e/: conftest.py  test_e2e_s3checkpoint.py  test_e2e_s3datasets.py  test_multiprocess_dataloading.py
s3dataset/tst/unit/: test_checkpointing.py  test_general_checkpointing.py  test_s3dataset_base.py  test_s3iterable_dataset.py  test_s3mapdataset.py  test_s3mapstyle_dataset.py  test_s3object.py  test_s3reader.py
s3dataset_s3_client/: Cargo.toml  MANIFEST.in  pyproject.toml
s3dataset_s3_client/python/src/s3dataset_s3_client/: __init__.py  _logger_patch.py  _s3dataset.pyi  put_object_stream_wrapper.py  s3object.py
s3dataset_s3_client/python/tst/integration/: test_mountpoint_s3_integration.py
s3dataset_s3_client/python/tst/unit/: test_mountpoint_s3_client.py  test_s3dataset_exception.py  test_s3object.py  test_structs.py
s3dataset_s3_client/rust/src/: exception.rs  get_object_stream.rs  lib.rs  list_object_stream.rs  mock_client.rs  mountpoint_s3_client.rs  mountpoint_s3_client_inner.rs  put_object_stream.rs  python_structs.rs
s3dataset_s3_client/rust/src/python_structs/: py_list_object_result.rs  py_object_info.rs  py_restore_status.rs
s3torchbenchmarking/: README.md  benchmark_results_aggregator.ipynb  pyproject.toml
s3torchbenchmarking/conf/: checkpointing.yaml  dataloading.yaml  dataloading_sharded_ent.yaml  dataloading_sharded_vit.yaml  dataloading_unsharded_10epochs.yaml  dataloading_unsharded_1epochs.yaml  dataloading_unsharded_ent_10epochs.yaml  dataset.yaml  dcp.yaml  dcp_ddp.yaml  dcp_ddp_load.yaml  dcp_ddp_save.yaml  dcp_fsdp_load.yaml  dcp_fsdp_save.yaml  lightning_checkpointing.yaml  pytorch_checkpointing.yaml  sharding.yaml
s3torchbenchmarking/conf/aws/: dynamodb.yaml  s3.yaml
s3torchbenchmarking/conf/checkpoint/: disk.yaml  none.yaml  s3.yaml
s3torchbenchmarking/conf/dataloader/: mountpoint.yaml  mountpointcache.yaml  s3iterabledataset.yaml  s3mapdataset.yaml
s3torchbenchmarking/conf/dataset/: mp_dataset.yaml  unsharded_dataset.yaml
s3torchbenchmarking/conf/hydra/callbacks/: collate_results.yaml
s3torchbenchmarking/conf/training/: lightning.yaml  vit.yaml
s3torchbenchmarking/src/s3torchbenchmarking/: __init__.py  benchmark.py  benchmark_utils.py  constants.py  datagen.py  dcp_common.py  hydra_callback.py  hydra_callbacks.py  job_results.py  lightning_benchmark.py  lightning_test.py  models.py
s3torchbenchmarking/src/s3torchbenchmarking/dataset/: benchmark.py
s3torchbenchmarking/src/s3torchbenchmarking/dcp/: README.md  __init__.py  benchmark.py  config.yaml  constants.py  distribution.py  models.py  results.py
s3torchbenchmarking/src/s3torchbenchmarking/dcp_ddp/: README.md  benchmark.py  load_benchmark.py  save_benchmark.py
s3torchbenchmarking/src/s3torchbenchmarking/dcp_fsdp/: README.md  batch.sh  batch2.sh  benchmark.py  llama_model_config.py  load.py  load2.py  load3.py  load4.py  load_benchmark.py  loadbatch.sh  save.py  save_and_load.py  save_benchmark.py  savebatch.sh  start.py  wait.py  waitbatch.sh
s3torchbenchmarking/tst/: test_compatibility.py
s3torchbenchmarking/utils/: collect_and_write_to_dynamodb.py  download_and_transform_results.py  generate_datasets_files.sh  html_result_generator.py  prepare_and_run_benchmark.sh  prepare_ec2_instance.sh  prepare_nvme.sh  run_benchmarks.sh  run_checkpoint_benchmarks.sh  run_checkpointing_benchmark.sh  run_dataloading_benchmarks.sh  run_dataset_benchmarks.sh  run_dcp_benchmarks.sh  run_dcp_ddp_benchmarks.sh  run_dcp_fsdp_benchmarks.sh  run_dcp_fsdp_load_benchmarks.sh  run_lightning_benchmarks.sh  upload_colated_results_to_s3.py
s3torchconnector/: MANIFEST.in  pyproject.toml
s3torchconnector/docs/: conf.py  make.bat
s3torchconnector/src/s3torchconnector/: __init__.py  _s3_bucket_iterable.py  _s3bucket_key.py  _s3bucket_key_data.py  _s3dataset_common.py  _shm.py  _user_agent.py  _version.py  s3_lightning_checkpoint.py  s3checkpoint.py  s3dataset_base.py  s3iterable_dataset.py  s3map_dataset.py  s3path.py  s3reader.py  s3sharded_dataloader.py  s3writer.py
s3torchconnector/tst/: conftest.py
s3torchconnector/tst/e2e/: conftest.py  customer_issue.py  customer_issue2.py  generate_tars.py  test_common.py  test_distributed_training.py  test_e2e_s3_lightning_checkpoint.py  test_e2e_s3checkpoint.py  test_e2e_s3datasets.py  test_mountpoint_client_parallel_access.py  test_multiprocess_dataloading.py  test_s3_client.py
s3torchconnector/tst/unit/: _checkpoint_byteorder_patch.py  _checkpoint_utils.py  _hypothesis_python_primitives.py  test_checkpointing.py  test_init.py  test_lightning_missing.py  test_py_typed.py  test_s3_client.py  test_s3_client_config.py  test_s3_lightning_checkpoint.py  test_s3dataset_base.py  test_s3dataset_common.py  test_s3iterable_dataset.py  test_s3mapdataset.py  test_s3path.py  test_s3reader.py  test_s3reader_common.py  test_s3reader_constructor.py  test_s3reader_dcp_optimized.py  test_s3reader_range_based.py  test_s3reader_sequential.py  test_s3writer.py  test_user_agent.py  test_version.py
s3torchconnectorclient/: Cargo.toml  MANIFEST.in  deny.toml  pyproject.toml  rust-toolchain.toml
s3torchconnectorclient/rust/: build.rs
s3torchconnectorclient/rust/src/: build_info.rs  exception.rs  get_object_stream.rs  lib.rs  list_object_stream.rs  logger_setup.rs  mock_client.rs  mountpoint_s3_client.rs  mountpoint_s3_client_inner.rs  put_object_stream.rs  python_structs.rs
(+257 files in other folders)
