[package]
name = "S3Dataset"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "_s3dataset"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
pyo3 = { version = "0.19.2" }
pyo3-log = "0.8.3"
futures = "0.3.28"
mountpoint-s3-client = "0.4.0"
mountpoint-s3-crt = "0.3.0"
log = "0.4.20"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
