[build-system]
requires = ["setuptools", "setuptools-rust", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "s3dataset_s3_client"
version = "0.1"
description = "Internal S3 client implementation for s3dataset"
requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "black"
]

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python/src"] }

[[tool.setuptools-rust.ext-modules]]
target = "s3dataset_s3_client._s3dataset"
