[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "s3torchbenchmarking"
version = "0.0.1"
description = "Tools to run and compare benchmarks against various PyTorch connectors like the s3torchconnector."
requires-python = ">=3.8,<3.13"
readme = "README.md"
dependencies = [
    "s3torchconnector[lightning,dcp]",
    "boto3",
    "hydra-core",
    "pandas",
    "pillow",
    "psutil",
    "pynvml",
    "requests",
    "torchvision",
    "transformers",
]

[project.scripts]
s3torch-datagen = "s3torchbenchmarking.datagen:synthesize_dataset"
