[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "s3torchbenchmarking"
version = "0.0.1"
description = "Tools to run and compare benchmarks against various PyTorch connectors like the s3torchconnector."
requires-python = ">=3.9,<3.14"
readme = "README.md"
dependencies = [
    "s3torchconnector[lightning,dcp]",
    "boto3",
    "click",
    "hydra-core",
    "pandas",
    "pillow",
    "prefixed",
    "psutil",
    "pynvml",
    "requests",
    "s3fs>=2024", # prevents "UserWarning: Your installed version of s3fs is very old" type of warnings
    "torchdata<0.10.0", # we have dependency on deprecated DataPipes, which were removed in 0.10.0
    "torchvision",
    "transformers",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
s3torch-datagen = "s3torchbenchmarking.datagen:synthesize_dataset"
