[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "s3torchconnector"
version = "1.3.2"
description = "S3 connector integration for PyTorch"
requires-python = ">=3.8,<3.13"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

dependencies = [
    "torch >= 2.0.1, != 2.5.0",
    "s3torchconnectorclient == 1.3.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-timeout",
    "hypothesis",
    "flake8",
    "black",
    "mypy"
]

e2e = [
    "torchdata<=0.9.0", # we have dependency on deprecated DataPipes, which were removed in 0.10.0
    "torchvision",
    "Pillow>=10.3.0",
    "boto3<1.37.2", # prevent conflict caused by aiobotocore that restrict version of botocore
    "numpy < 2",
    "pytest-xdist",
    "fsspec==2025.3.0; python_version == '3.8'", # ruins integration tests for datasets with newer fsspec on Python 3.8
]

lightning = [
    "lightning >= 2.0"
]

lightning-tests = [
    "s3torchconnector[lightning]",
    "s3fs",
    "torchmetrics != 1.7.0",
]

dcp = [
    "tenacity",
    "torch >= 2.3, != 2.5.0",
]

dcp-test = [
    "s3torchconnector[dcp]",
    "pytest",
]

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["src"] }

[tool.setuptools]
license-files = ["LICENSE", "THIRD-PARTY-LICENSES", "NOTICE"]
