[package]
name = "s3torchconnectorclient"
version = "1.1.0"
edition = "2021"
publish = false
license = "BSD-3-Clause"
build = "rust/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "_mountpoint_s3_client"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[build-dependencies]
built = "0.7"

[dependencies]
pyo3 = { version = "0.19.2" }
pyo3-log = "0.8.3"
futures = "0.3.28"
mountpoint-s3-client = "0.6.0"
mountpoint-s3-crt = "0.5.0"
log = "0.4.20"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.17"
nix = { version = "0.27.1", features = ["process"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
