[build-system]
requires = ["setuptools", "setuptools-rust", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "s3torchconnectorclient"
version = "1.1.1"
description = "Internal S3 client implementation for s3torchconnector"
requires-python = ">=3.8,<3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-timeout",
    "hypothesis",
    "flake8",
    "black"
]

[tool.setuptools.packages]
# Pure Python packages/modules
find = { where = ["python/src"] }

[[tool.setuptools-rust.ext-modules]]
target = "s3torchconnectorclient._mountpoint_s3_client"
